tests/baselines/reference/nodeModulesCJSResolvingToESM2_cjsPackageJson.errors.txt
/ctsExtension.cts(1,16): error TS1479: The current file is a CommonJS module whose imports will produce 'require' calls; however, the referenced file is an ECMAScript module and cannot be imported with 'require'. Consider writing a dynamic 'import("./module.mjs")' call instead.
/jsExtension.js(1,16): error TS1479: The current file is a CommonJS module whose imports will produce 'require' calls; however, the referenced file is an ECMAScript module and cannot be imported with 'require'. Consider writing a dynamic 'import("./module.mjs")' call instead.
/tsExtension.ts(1,16): error TS1479: The current file is a CommonJS module whose imports will produce 'require' calls; however, the referenced file is an ECMAScript module and cannot be imported with 'require'. Consider writing a dynamic 'import("./module.mjs")' call instead.


==== /package.json (0 errors) ====
    { "type": "commonjs" }
    
==== /module.mts (0 errors) ====
    export {};
    
==== /tsExtension.ts (1 errors) ====
    import {} from "./module.mjs";
                   ~~~~~~~~~~~~~~
!!! error TS1479: The current file is a CommonJS module whose imports will produce 'require' calls; however, the referenced file is an ECMAScript module and cannot be imported with 'require'. Consider writing a dynamic 'import("./module.mjs")' call instead.
!!! related TS1480 /tsExtension.ts:1:16: To convert this file to an ECMAScript module, change its file extension to '.mts'.
    
==== /jsExtension.js (1 errors) ====
    import {} from "./module.mjs";
                   ~~~~~~~~~~~~~~
!!! error TS1479: The current file is a CommonJS module whose imports will produce 'require' calls; however, the referenced file is an ECMAScript module and cannot be imported with 'require'. Consider writing a dynamic 'import("./module.mjs")' call instead.
!!! related TS1480 /jsExtension.js:1:16: To convert this file to an ECMAScript module, change its file extension to '.mjs'.
    
==== /ctsExtension.cts (1 errors) ====
    import {} from "./module.mjs";
                   ~~~~~~~~~~~~~~
!!! error TS1479: The current file is a CommonJS module whose imports will produce 'require' calls; however, the referenced file is an ECMAScript module and cannot be imported with 'require'. Consider writing a dynamic 'import("./module.mjs")' call instead.